--- a/app/src/main/res/xml/step4.xml
+++ b/app/src/main/res/xml/step4.xml
@@ -29,13 +29,29 @@
         />
 
         <KeyFrameSet>
-            <KeyPosition
+            <KeyFrameSet>
+                <KeyPosition
+                    app:framePosition="25"
+                    app:motionTarget="@id/moon"
+                    app:keyPositionType="parentRelative"
+                    app:percentY="0.6"
+                    app:percentX="0.1"
+                    />
+                <KeyPosition
                     app:framePosition="50"
                     app:motionTarget="@id/moon"
                     app:keyPositionType="parentRelative"
                     app:percentY="0.5"
-            />
-            <!-- TODO: Add two more KeyPositions to the KeyFrameSet here -->
+                    app:percentX="0.3"
+                    />
+                <KeyPosition
+                    app:framePosition="75"
+                    app:motionTarget="@id/moon"
+                    app:keyPositionType="parentRelative"
+                    app:percentY="0.6"
+                    app:percentX="0.1"
+                    />
+            </KeyFrameSet>
 
         </KeyFrameSet>
     </Transition>
