Drag events and complex paths

--- a/app/src/main/res/xml/step7.xml
+++ b/app/src/main/res/xml/step7.xml
@@ -24,11 +24,11 @@
             app:constraintSetEnd="@+id/end"
             app:duration="3000">
 
-        <!-- Fix OnSwipe by changing touchAnchorSide -->
         <OnSwipe
-                app:touchAnchorId="@id/moon"
-                app:touchAnchorSide="bottom"
-        />
+            app:touchAnchorId="@id/moon"
+            app:touchAnchorSide="bottom"
+            app:dragDirection="dragRight"
+            />
 
 
         <KeyFrameSet>
