--- a/app/src/main/res/layout/activity_step8.xml
+++ b/app/src/main/res/layout/activity_step8.xml
@@ -24,13 +24,16 @@
             android:layout_width="match_parent"
             android:layout_height="180dp">
         <androidx.constraintlayout.motion.widget.MotionLayout
-                android:id="@+id/motion_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layoutDescription="@xml/step8"
-                app:motionDebug="SHOW_PATH" >
+            android:id="@+id/motion_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutDescription="@xml/step8"
+            app:motionDebug="SHOW_PATH"
+            android:minHeight="80dp"
+            app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"  >
 
-            <ImageView
+
+        <ImageView
                     android:id="@+id/background"
                     android:layout_width="0dp"
                     android:layout_height="1000dp"
